cmake_minimum_required(VERSION 3.10)
project(proxy)
execute_process(COMMAND protoc msg.proto --cpp_out=${CMAKE_CURRENT_SOURCE_DIR} -I${CMAKE_CURRENT_SOURCE_DIR})
add_compile_options(-Wall -g3)
aux_source_directory(. proxy)
add_library(${PROJECT_NAME} ${proxy})
add_subdirectory(local)
add_subdirectory(remote)
